--- a/front_end/package.json
+++ b/front_end/package.json
@@ -13,6 +13,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.1",
     "email-validator": "^2.0.4",
+    "node-sass": "^4.13.1",
     "password-validator": "^5.0.3",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
