--- a/back_end/BootRestReact/src/main/resources/application.properties
+++ b/back_end/BootRestReact/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=7070
 
 #db setting -> pool generate
-spring.datasource.url=jdbc:mysql://70.12.247.126:3306/ssafydb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://70.12.247.126:3306/volunteer?serverTimezone=UTC
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
