--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/volunteer?serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
 spring.datasource.tomcat.max-active=20
