--- a/back_end/BootRestReact/pom.xml
+++ b/back_end/BootRestReact/pom.xml
@@ -92,11 +92,11 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/wsdl4j/wsdl4j -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>wsdl4j</groupId>
 			<artifactId>wsdl4j</artifactId>
 			<version>1.6.2</version>
-		</dependency>
+		</dependency> -->
 
 	</dependencies>
 
