--- a/front_end/package.json
+++ b/front_end/package.json
@@ -8,19 +8,32 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/debounce": "^1.2.0",
     "@types/reach__router": "^1.2.6",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux-actions": "^2.6.1",
+    "@types/styled-components": "^4.4.2",
+    "@types/validator": "^12.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.1",
     "email-validator": "^2.0.4",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
+    "open-color": "^1.7.0",
     "password-validator": "^5.0.3",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "typescript": "^3.7.5"
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-pender": "^2.0.12",
+    "typescript": "^3.7.5",
+    "validator": "^12.2.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src react-scripts start",
