--- a/back_end/A205/pom.xml
+++ b/back_end/A205/pom.xml
@@ -86,6 +86,18 @@
    			<artifactId>springfox-swagger-ui</artifactId>
    			<version>2.7.0</version>
 		</dependency>
+		
+			<!-- Mail -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
