--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/volunteer?serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://70.12.247.126:3306/volunteer?serverTimezone=UTC
+spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
 spring.datasource.tomcat.max-active=20
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 mybatis.config-location=classpath:mybatis-config.xml
-
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
