--- a/back_end/BootRestReact/src/main/resources/application.properties
+++ b/back_end/BootRestReact/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #port
-#server.port=7070
+server.port=7070
 
 #db setting -> pool generate
 spring.datasource.url=jdbc:mysql://70.12.247.126:3306/volunteer?serverTimezone=UTC
