--- a/front_end/package.json
+++ b/front_end/package.json
@@ -9,8 +9,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/debounce": "^1.2.0",
+    "@types/lodash": "^4.14.149",
     "@types/reach__router": "^1.2.6",
-    "@types/react-redux": "^7.1.7",
+    "@types/react-redux": "^7.1.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^4.4.2",
@@ -19,7 +20,6 @@
     "axios": "^0.19.1",
     "email-validator": "^2.0.4",
     "immutable": "^4.0.0-rc.12",
-    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "open-color": "^1.7.0",
     "password-validator": "^5.0.3",
@@ -32,6 +32,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-pender": "^2.0.12",
+    "styled-components": "^5.0.0",
     "typescript": "^3.7.5",
     "validator": "^12.2.0"
   },
