--- a/front_end/package.json
+++ b/front_end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.8.3",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -27,6 +28,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
+    "react-kakao-login": "^1.2.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
