--- a/front_end/package.json
+++ b/front_end/package.json
@@ -9,16 +9,26 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/reach__router": "^1.2.6",
+    "@types/react-addons-update": "^0.14.20",
+    "@types/react-dev-utils": "^9.0.2",
+    "@types/react-infinite-scroll-component": "^4.2.5",
     "@types/react-router-dom": "^5.1.3",
     "awesome-typescript-loader": "^5.2.1",
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^9.1.0",
     "email-validator": "^2.0.4",
+    "node-sass": "^4.13.1",
     "password-validator": "^5.0.3",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
+    "react-addons-update": "^15.6.2",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-infinite-scroll": "^0.1.5",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
