--- a/front_end/tsconfig.json
+++ b/front_end/tsconfig.json
@@ -4,14 +4,24 @@
     "outDir": "./dist",
     "allowJs": true,
     "target": "es5",
-    "lib": ["es2015", "es2016", "es2017", "es2018", "dom", "webworker"],
+    "lib": [
+      "es2015",
+      "es2016",
+      "es2017",
+      "es2018",
+      "dom",
+      "webworker"
+    ],
     "jsx": "react",
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "downlevelIteration": true,
     "sourceMap": true,
-    "typeRoots": ["./types", "./node_modules/@types"],
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -21,6 +31,10 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["./**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
