--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+./front_end/.env
+.env
 
 # Created by https://www.gitignore.io/api/react
 # Edit at https://www.gitignore.io/?templates=react
