--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jwt.secret=parkjunghwan
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://13.124.127.232:3306/volunteer?autoReconnect=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/volunteer?autoReconnect=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.platform=mysql
 spring.datasource.tomcat.max-active=20
