파일업다운완료

--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 jwt.secret=parkjunghwan
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+# Select one from two ways below !
+# file.upload-dir=./uploads
+file.upload-dir=/Users/multicampus/Documents/uploadtest
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/volunteer?autoReconnect=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=ssafy
+spring.datasource.url=jdbc:mysql://13.124.127.232:3306/volunteer?autoReconnect=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=ssafy
 spring.datasource.platform=mysql
 spring.datasource.tomcat.max-active=20
