--- a/front_end/package.json
+++ b/front_end/package.json
@@ -35,6 +35,7 @@
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
+    "react-async-script-loader": "^0.3.0",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
