우선 잘 동작되는 지도.

--- a/front_end/tsconfig.json
+++ b/front_end/tsconfig.json
@@ -26,7 +26,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true
