--- a/front_end/package.json
+++ b/front_end/package.json
@@ -10,12 +10,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/debounce": "^1.2.0",
+    "@types/faker": "^4.1.9",
     "@types/lodash": "^4.14.149",
     "@types/reach__router": "^1.2.6",
     "@types/react-addons-update": "^0.14.20",
     "@types/react-dev-utils": "^9.0.2",
     "@types/react-infinite-scroll-component": "^4.2.5",
-    "@types/react-redux": "^7.1.3",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^4.4.2",
@@ -26,6 +27,7 @@
     "babel-preset-react-app": "^9.1.0",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
+    "faker": "^4.1.0",
     "immer": "^5.3.2",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
@@ -77,6 +79,8 @@
     ]
   },
   "devDependencies": {
+    "@types/immutable": "^3.8.7",
+    "@types/redux": "^3.6.0",
     "cross-env": "^6.0.3"
   }
 }
