--- a/front_end/tsconfig.json
+++ b/front_end/tsconfig.json
@@ -14,6 +14,7 @@
     ],
     "jsx": "react",
     "module": "esnext",
+    // "noImplicitAny": false,
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "downlevelIteration": true,
