--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 # Select one from two ways below !
 # file.upload-dir=./uploads
-file.upload-dir=/Users/multicampus/Documents/uploadtest
+#file.upload-dir=/Users/multicampus/Documents/uploadtest
+file.upload-dir=/var/lib/tomcat8/webapps/uploads
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://13.124.127.232:3306/volunteer?autoReconnect=true&useSSL=false&serverTimezone=UTC
