--- a/back_end/A205/pom.xml
+++ b/back_end/A205/pom.xml
@@ -147,6 +147,11 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.glassfish.jaxb</groupId>
+    		<artifactId>jaxb-runtime</artifactId>
+		</dependency>
 
 	</dependencies>
 
