파일 업/다운/보여주기 완료git add .git add .

--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -24,3 +24,6 @@ mybatis.config-location=classpath:mybatis-config.xml
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
+
+# resources.location:/var/lib/tomcat8/webapps/uploads/
+resources.uri_path=/uploads
