--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -13,7 +13,7 @@ file.upload-dir=/var/lib/tomcat8/webapps/uploads
 # file.upload-dir=/home/ubuntu/uploads
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://13.124.127.232:3306/volunteer?autoReconnect=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://13.124.127.232:3306/volunteer?autoReconnect=true&useSSL=false&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=ssafy
 spring.datasource.platform=mysql
