--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -24,3 +24,8 @@ mybatis.config-location=classpath:mybatis-config.xml
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
+
+#spring.security.oauth2.client.registration.client-id=266208955593-716c9b8v63c5vfrure5n1tv8n9lrld6p.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.client-secret=Zt1OhnO9dhBEuRHjICwY7qQi
+spring.security.oauth2.client.registration.google.clientId=266208955593-716c9b8v63c5vfrure5n1tv8n9lrld6p.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.clientSecret=Zt1OhnO9dhBEuRHjICwY7qQi
