--- a/front_end/package.json
+++ b/front_end/package.json
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.149",
     "@types/reach__router": "^1.2.6",
     "@types/react-addons-update": "^0.14.20",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dev-utils": "^9.0.2",
     "@types/react-infinite-scroll-component": "^4.2.5",
     "@types/react-redux": "^7.1.7",
@@ -39,6 +40,7 @@
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
     "react-async-script-loader": "^0.3.0",
+    "react-datepicker": "^2.12.1",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
