--- a/front_end/package.json
+++ b/front_end/package.json
@@ -14,6 +14,8 @@
     "@types/lodash": "^4.14.149",
     "@types/reach__router": "^1.2.6",
     "@types/react-addons-update": "^0.14.20",
+    "@types/react-animate-on-scroll": "^2.1.2",
+    "@types/react-countup": "^4.0.1",
     "@types/react-dev-utils": "^9.0.2",
     "@types/react-infinite-scroll-component": "^4.2.5",
     "@types/react-redux": "^7.1.3",
@@ -37,7 +39,9 @@
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-async-script-loader": "^0.3.0",
+    "react-countup": "^4.3.3",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
@@ -45,6 +49,7 @@
     "react-infinite-scroll": "^0.1.5",
     "react-infinite-scroll-component": "^5.0.4",
     "react-kakao-login": "^1.2.1",
+    "react-page-scroller": "^2.0.6-beta",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
