--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -24,8 +24,13 @@ mybatis.config-location=classpath:mybatis-config.xml
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
-
-
 # resources.location:/var/lib/tomcat8/webapps/uploads/
 resources.uri_path=/uploads
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ssimbongsa@gmail.com
+spring.mail.password=Ssafya205!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
