--- a/back_end/A205/src/main/resources/application.properties
+++ b/back_end/A205/src/main/resources/application.properties
@@ -32,5 +32,6 @@ spring.mail.port=587
 spring.mail.username=ssimbongsa@gmail.com
 spring.mail.password=Ssafya205!
 spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
