--- a/front_end/package.json
+++ b/front_end/package.json
@@ -29,8 +29,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^9.1.0",
     "chart.js": "^2.9.3",
+    "color-convert": "^2.0.1",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
+    "google-palette": "^1.1.0",
     "immer": "^5.3.2",
     "immutable": "^4.0.0-rc.12",
     "jsonwebtoken": "^8.5.1",
