--- a/front_end/package.json
+++ b/front_end/package.json
@@ -10,13 +10,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/debounce": "^1.2.0",
+    "@types/faker": "^4.1.9",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/lodash": "^4.14.149",
     "@types/reach__router": "^1.2.6",
     "@types/react-addons-update": "^0.14.20",
-    "@types/react-datepicker": "^2.11.0",
     "@types/react-animate-on-scroll": "^2.1.2",
     "@types/react-countup": "^4.0.1",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dev-utils": "^9.0.2",
     "@types/react-immutable-proptypes": "^2.1.0",
     "@types/react-infinite-scroll-component": "^4.2.5",
@@ -44,8 +45,8 @@
     "react-addons-update": "^15.6.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-async-script-loader": "^0.3.0",
-    "react-datepicker": "^2.12.1",
     "react-countup": "^4.3.3",
+    "react-datepicker": "^2.12.1",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
