--- a/front_end/package.json
+++ b/front_end/package.json
@@ -14,9 +14,9 @@
     "@types/lodash": "^4.14.149",
     "@types/reach__router": "^1.2.6",
     "@types/react-addons-update": "^0.14.20",
-    "@types/react-datepicker": "^2.11.0",
     "@types/react-animate-on-scroll": "^2.1.2",
     "@types/react-countup": "^4.0.1",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dev-utils": "^9.0.2",
     "@types/react-immutable-proptypes": "^2.1.0",
     "@types/react-infinite-scroll-component": "^4.2.5",
@@ -25,6 +25,7 @@
     "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^4.4.2",
     "@types/validator": "^12.0.1",
+    "@vx/gradient": "0.0.193",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.2",
     "babel-preset-react": "^6.24.1",
@@ -32,6 +33,7 @@
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "faker": "^4.1.0",
+    "flubber": "^0.4.2",
     "immer": "^5.3.2",
     "immutable": "^4.0.0-rc.12",
     "jsonwebtoken": "^8.5.1",
@@ -44,8 +46,8 @@
     "react-addons-update": "^15.6.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-async-script-loader": "^0.3.0",
-    "react-datepicker": "^2.12.1",
     "react-countup": "^4.3.3",
+    "react-datepicker": "^2.12.1",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
@@ -58,6 +60,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-scroll-trigger": "^0.6.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-pender": "^2.0.12",
