--- a/front_end/package.json
+++ b/front_end/package.json
@@ -30,9 +30,11 @@
     "axios": "^0.19.2",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^9.1.0",
+    "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "faker": "^4.1.0",
+    "google-palette": "^1.1.0",
     "immer": "^5.3.2",
     "immutable": "^4.0.0-rc.12",
     "jsonwebtoken": "^8.5.1",
@@ -45,6 +47,7 @@
     "react-addons-update": "^15.6.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-async-script-loader": "^0.3.0",
+    "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-datepicker": "^2.12.1",
     "react-dev-utils": "^10.0.0",
