--- a/front_end/package.json
+++ b/front_end/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^4.13.1",
     "open-color": "^1.7.0",
     "password-validator": "^5.0.3",
+    "pure-react-carousel": "^1.25.2",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
