--- a/front_end/package.json
+++ b/front_end/package.json
@@ -99,6 +99,7 @@
     "react-page-scroller": "^2.0.6-beta",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-pender": "^2.0.12",
