--- a/front_end/package.json
+++ b/front_end/package.json
@@ -6,6 +6,7 @@
     "@babel/runtime": "^7.8.3",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "@reach/router": "^1.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -31,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^9.1.0",
     "chart.js": "^2.9.3",
+    "color-convert": "^2.0.1",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "faker": "^4.1.0",
