--- a/front_end/.gitignore
+++ b/front_end/.gitignore
@@ -10,7 +10,8 @@
 
 # production
 /build
-
+/config
+/.idea
 # misc
 .DS_Store
 
@@ -21,4 +22,4 @@ yarn-debug.log*
 yarn-error.log*
 yarn.lock*
 .vscode/
-pakage-lock.json
+package-lock.json
