비밀번호 변경 작업중

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -38,9 +38,11 @@
     "google-palette": "^1.1.0",
     "immer": "^5.3.2",
     "immutable": "^4.0.0-rc.12",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "npm": "^6.13.7",
     "nuka-carousel": "^4.6.3",
     "open-color": "^1.7.0",
     "password-validator": "^5.0.3",
@@ -55,6 +57,7 @@
     "react-datepicker": "^2.12.1",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-file-viewer": "^0.5.0",
     "react-google-login": "^5.0.7",
     "react-icons": "^3.9.0",
     "react-immutable-proptypes": "^2.1.0",
