동적 화면전환 구현

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -70,6 +70,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-spring": "^8.0.27",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-pender": "^2.0.12",
